compose-test/k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: app
        image: ghcr.io/xotmfrlox/devops-app:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
